--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "@mui/material": "^5.16.5",
     "@nextui-org/react": "^2.4.6",
     "@nextui-org/theme": "^2.2.9",
-    "framer-motion": "^11.3.17",
+    "framer-motion": "^11.3.19",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1",
+    "react-transition-group": "^4.4.5",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
